# chenopis

./: .gitignore  INSTALL  Makefile.am  README  autogen.sh  configure.ac
VS2010/: swan_dll.vfproj  swan_exe.vfproj  swan_vs2010.sln
cases/a11refra/data_in/: a11refr.bot  a11refr.loc  readme.a11
cases/a11refra/graphs/: a11graph.m  a11rdmod.m  a11rdobs.m
cases/a11refra/model_io/: .gitignore  INPUT  a11ref01.inp  a11ref01.tab  a11ref01.tbl
scripts/: codegen.py  swandemo.ipynb  upgradefiles.ipynb  upgradefiles.py
src/: Makefile  Makefile.am  SwanBMI.F90  SwanBpntlist.F90  SwanCheckGrid.F90  SwanCompUnstruc.F90  SwanComputeForce.F90  SwanConvAccur.F90  SwanConvStopc.F90  SwanESMF.F90  SwanFields.F90  SwanGridFace.F90  SwanInitCompGrid.F90  SwanMaxOverNodes.F90  SwanMinOverNodes.F90  SwanPrepComp.F90  SwanPunCollect.F90  SwanReadADCGrid.F90  SwanReadfort18.F90  SwanSumOverNodes.F90  SwanTranspAc.F90  extra.json  macros.inc  ocpcre.F  ocpids.F  ocpmix.F  swanapi.F  swancom1.F  swancom3.F  swanhcat.F  swanmain.F  swanout1.F  swanout2.F  swanparll.F  swanpre1.F  swanpre2.F  swanser.F  swmod1.F  swmod2.F  variables.json
tests/: Makefile.am  test_swanlib.py
