
bin_PROGRAMS = chenopis

chenopis_SOURCES=\
	swmod1 \
	swmod2 \
	m_constants \
	m_fileio \
	serv_xnl4v5 \
	mod_xnl4v5 \
	SwanGriddat \
	SwanGridobjects \
	SwanCompdata.F90 \
	swanmain.F \
	swanpre1.F \
	swanpre2.F \
	swancom1.F \
	swancom2.F \
	swancom3.F \
	swancom4.F \
	swancom5.F \
	swanout1.F \
	swanout2.F \
	swanser.F \
	swanparll.F \
	SwanReadGrid.F90 \
	SwanReadADCGrid.F90 \
	SwanReadTriangleGrid.F90 \
	SwanReadEasymeshGrid.F90 \
	SwanInitCompGrid.F90 \
	SwanCheckGrid.F90 \
	SwanCreateEdges.F90 \
	SwanGridTopology.F90 \
	SwanGridVert.F90 \
	SwanGridCell.F90 \
	SwanGridFace.F90 \
	SwanPrintGridInfo.F90 \
	SwanFindPoint.F90 \
	SwanPointinMesh.F90 \
	SwanBpntlist.F90 \
	SwanPrepComp.F90 \
	SwanVertlist.F90 \
	SwanCompUnstruc.F90 \
	SwanDispParm.F90 \
	SwanPropvelX.F90 \
	SwanSweepSel.F90 \
	SwanPropvelS.F90 \
	SwanTranspAc.F90 \
	SwanTranspX.F90 \
	SwanDiffPar.F90 \
	SwanGSECorr.F90 \
	SwanInterpolatePoint.F90 \
	SwanInterpolateAc.F90 \
	SwanInterpolateOutput.F90 \
	SwanConvAccur.F90 \
	SwanConvStopc.F90 \
	SwanThreadBounds.F90 \
	SwanFindObstacles.F90 \
	SwanCrossObstacle.F90 \
	SwanComputeForce.F90 \
	SwanIntgratSpc.F90 \
	SwanBndStruc.F90 \
	SwanReadfort18.F90 \
	SwanPunCollect.F90 \
	SwanSumOverNodes.F90 \
	SwanMinOverNodes.F90 \
	SwanMaxOverNodes.F90 \
	ocpids.F \
	ocpcre.F \
	ocpmix.F

bin_PROGRAMS = hcat
hcat_SOURCES=swanhcat.F


bin_PROGRAMS=unhcat
unhcat_SOURCES=HottifySWAN



